# ADT_forC

./: CMakeLists.txt  README.md
linked_list/: double_list.c  double_list.h  single_list.c  single_list.h
tests/: CMakeLists.txt  test_dl_list.c  test_sl_list.c
